Better text alignment and prevent default behaviour

--- a/style.css
+++ b/style.css
@@ -1,9 +1,21 @@
+html {
+    height: 100%;
+
+    background-color: #302345;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    background-repeat: no-repeat;
+
+    -webkit-text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
+}
 
 body {
     margin: 0;
     text-align: center;
     color: #fff;
-    background-color: #302345;
     font-family: 'Pacifico', cursive;
     cursor: none;
 }
@@ -20,7 +32,7 @@ body {
 
 #title {
     position: absolute;
-    top: 800px;
+    bottom: 8%;
     left: 0;
     right: 0;
 
